@@ -1,0 +1,248 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+	"http://www.w3.org/TR/html4/loose.dtd">
+
+<html>
+<head>
+
+<title>gtkdialog: terminal widget reference</title>
+
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" >
+
+<style type="text/css">
+	body {
+		font-size: 14px;
+		font-family: arial, verdana, sans-serif;
+		background-color: #e0e0e8;
+	}
+	h1 {
+		font-size: 24px;
+	}
+	h2 {
+		font-size: 18px;
+	}
+	a:link {
+		text-decoration: none;
+	}
+	a:visited {
+		text-decoration: none;
+	}
+	a:active {
+		text-decoration: none;
+	}
+	a:hover {
+		color: #8080ff;
+		text-decoration: underline;
+	}
+	hr {
+		color: #a8a8b0;
+		background-color: #a8a8b0;
+		height: 1px;
+		border: 0;
+	}
+	pre {
+		background-color: #e8e8f0;
+		/*width: 500px;*/
+		border: 1px dotted #b8b8c0;
+		padding: 10px;
+	}
+	sup {
+		font-size: 10px;
+	}
+	table.wiki {
+		/*border-color: #ff0000;*/
+		border-color: #c8c8d0;
+		border-width: 0px 0px 2px 2px;
+		border-style: solid;
+		border-collapse: collapse;
+		border-spacing: 0px;
+	}
+	td.wiki, th.wiki {
+		/*border-color: #00ff00;*/
+		border-color: #c8c8d0;
+		border-width: 2px 2px 0px 0px;
+		border-style: solid;
+	}
+	th.wiki {
+		background-color: #e8e8f0;
+	}
+	.footer {
+		font-size: 14px;
+	}
+</style>
+
+</head>
+<body bgcolor="#e0e0e8">
+
+<!--<table width="978" align="center" bgcolor="#b8b8c0" cellpadding="0px" cellspacing="1px">-->
+	<table bgcolor="#b8b8c0" cellpadding="0px" cellspacing="1px">
+		<tr>
+			<td>
+				<table bgcolor="#ffffff" cellpadding="0px" cellspacing="10px">
+					<tr>
+						<td>
+
+<h1> terminal widget </h1>
+
+A <a href="http://developer.gnome.org/vte/unstable/VteTerminal.html">VteTerminal</a>
+
+<hr>
+
+<h2> Definition </h2>
+
+<pre>
+&lt;terminal tag_attr="value"...&gt;
+	&lt;variable&gt;varname&lt;/variable&gt;
+	&lt;height&gt;value&lt;/height&gt;
+	&lt;width&gt;value&lt;/width&gt;
+	&lt;input&gt;command&lt;/input&gt;
+	&lt;input file&gt;filename&lt;/input&gt;
+	&lt;sensitive&gt;state&lt;/sensitive&gt;
+	&lt;action&gt;activity&lt;/action&gt;...
+	&lt;action signal="type"&gt;activity&lt;/action&gt;...
+	&lt;action type="function"&gt;parameter&lt;/action&gt;...
+&lt;/terminal&gt;
+</pre>
+
+<p>"..." denotes acceptance of multiples of the same thing.</p>
+
+<h2> Tag Attributes </h2>
+
+<p>See the <a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal.object-hierarchy">VteTerminal</a> widget and ancestor class properties.</p>
+
+<p>The following custom tag attributes are available:</p>
+
+<table class="wiki" border="1" cellpadding="5px">
+<tr><th class="wiki"> <b>Name</b> </th><th class="wiki"> <b>Description</b> </th><th class="wiki"> <b>Value</b> </th><th class="wiki"> <b>Since</b> </th></tr>
+<tr><td class="wiki"> space-expand </td><td class="wiki"> Pack widget expanding into space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> font-desc<sup><a href="#note1">[1]</a></sup> </td><td class="wiki"> Font description </td><td class="wiki"> eg. <code>Monospace Bold 14</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> background-tint-color<sup><a href="#note2">[2]</a></sup> </td><td class="wiki"> Background tint colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> text-background-color </td><td class="wiki"> Text background colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> text-foreground-color </td><td class="wiki"> Text foreground colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> bold-foreground-color </td><td class="wiki"> Bold text foreground colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> dim-foreground-color </td><td class="wiki"> Dim text foreground colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> cursor-background-color </td><td class="wiki"> Cursor background colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> highlight-background-color </td><td class="wiki"> Highlighted text background colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> argv? </td><td class="wiki"> Arguments starting at argv0 (command) </td><td class="wiki"> eg. <code>/bin/sh</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> envv? </td><td class="wiki"> Environment variables starting at envv0 </td><td class="wiki"> eg. <code>MESSAGE=Hello</code> </td><td class="wiki"> </td></tr>
+</table>
+
+<h2> Directives </h2>
+
+<p>Some of these may have tag attribute equivalents.</p>
+
+<table class="wiki" border="1" cellpadding="5px">
+<tr><th class="wiki"> <b>Name</b> </th><th class="wiki"> <b>Description</b> </th><th class="wiki"> <b>Contents</b> </th><th class="wiki"> <b>Mandatory</b> </th><th class="wiki"> <b>Since</b> </th></tr>
+<tr><td class="wiki"> variable </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> height </td><td class="wiki"> Initial height </td><td class="wiki"> An integer &gt; <code>0</code> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> width </td><td class="wiki"> Initial width </td><td class="wiki"> An integer &gt; <code>0</code> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> input </td><td class="wiki"> Data input source </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> input file </td><td class="wiki"> Data input source </td><td class="wiki"> Filename </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> sensitive </td><td class="wiki"> Active state </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action </td><td class="wiki"> Execute command on default signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Execute command on signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Perform function on signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> action type="<i>function</i>" </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+</table>
+
+<h2> Signals </h2>
+
+<p>The default signal is "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal-child-exited">child-exited</a>", emitted when the terminal detects that the child has exited. </p>
+
+<h2> Functions </h2>
+
+<p>The following functions can be performed upon this widget by any widget capable of emitting signals:</p>
+
+<table class="wiki" border="1" cellpadding="5px">
+<tr><th class="wiki"> <b>Type</b> </th><th class="wiki"> <b>Description</b> </th><th class="wiki"> <b>Parameter</b> </th><th class="wiki"> <b>Since</b> </th></tr>
+<tr><td class="wiki"> enable </td><td class="wiki"> Reactivate timer </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> disable </td><td class="wiki"> Deactivate timer </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> show </td><td class="wiki"> Show widget </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> hide </td><td class="wiki"> Hide widget </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> refresh </td><td class="wiki"> Reload input data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> clear </td><td class="wiki"> Reset terminal and rerun command </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+</table>
+
+<p>The following general functions can be performed by any widget capable of emitting signals:</p>
+
+<table class="wiki" border="1" cellpadding="5px">
+<tr><th class="wiki"> <b>Type</b> </th><th class="wiki"> <b>Description</b> </th><th class="wiki"> <b>Parameter</b> </th><th class="wiki"> <b>Since</b> </th></tr>
+<tr><td class="wiki"> command </td><td class="wiki"> Execute command </td><td class="wiki"> Shell command </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> exit </td><td class="wiki"> Exit dialog </td><td class="wiki"> A value for the <code>EXIT</code> shell variable </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> closewindow </td><td class="wiki"> Close launched dialog </td><td class="wiki"> Launched dialog's shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> launch </td><td class="wiki"> Launch new dialog </td><td class="wiki"> New dialog's shell variable name </td><td class="wiki"> </td></tr>
+</table>
+
+<h2> Notes </h2>
+
+<p><a name="note1"></a>1. There exists an equivalently named "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal--font-desc">font-desc</a>" VTE property but it doesn't accept strings so it's converted by Gtkdialog.</p>
+
+<p><a name="note2"></a>2. There exists an equivalently named "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal--background-tint-color">background-tint-color</a>" VTE property but it doesn't accept strings so it's converted by Gtkdialog.</p>
+
+<p>This is a non-mandatory widget that requires <a href="http://ftp.gnome.org/pub/gnome/sources/vte/">libvte</a> support be built into Gtkdialog at compile time.</p>
+
+<p>This widget was introduced in version 0.8.1.</p>
+
+<hr>
+<p>
+<a href="button.html">button</a>, 
+<a href="checkbox.html">checkbox</a>, 
+<a href="colorbutton.html">colorbutton</a>, 
+<a href="comboboxentry.html">comboboxentry</a>, 
+<a href="comboboxtext.html">comboboxtext</a>, 
+<a href="combobox.html">combobox</a>, 
+<a href="edit.html">edit</a>, 
+<a href="entry.html">entry</a>, 
+<a href="fontbutton.html">fontbutton</a>, 
+<a href="frame.html">frame</a>, 
+<a href="hbox.html">hbox</a>, 
+<a href="hscale.html">hscale</a>, 
+<a href="hseparator.html">hseparator</a>, 
+<a href="list.html">list</a>, 
+<a href="menubar.html">menubar</a>, 
+<a href="menuitemseparator.html">menuitemseparator</a>, 
+<a href="menuitem.html">menuitem</a>, 
+<a href="menu.html">menu</a>, 
+<a href="notebook.html">notebook</a>, 
+<a href="pixmap.html">pixmap</a>, 
+<a href="progressbar.html">progressbar</a>, 
+<a href="radiobutton.html">radiobutton</a>, 
+<a href="separator.html">separator</a>, 
+<a href="spinbutton.html">spinbutton</a>, 
+<a href="statusbar.html">statusbar</a>, 
+<a href="table.html">table</a>, 
+<a href="terminal.html">terminal</a>, 
+<a href="text.html">text</a>, 
+<a href="timer.html">timer</a>, 
+<a href="togglebutton.html">togglebutton</a>, 
+<a href="tree.html">tree</a>, 
+<a href="vbox.html">vbox</a>, 
+<a href="vscale.html">vscale</a>, 
+<a href="vseparator.html">vseparator</a>, 
+<a href="window.html">window</a>, 
+</p>
+
+							<p>&nbsp;</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<table width="100%" cellpadding="0px" cellspacing="0px">
+								<tr>
+									<td class="footer" width="33%" align="center">2012-08-27 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
+									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
+
+</body>
+</html>
